# mm-trader

./: .gitignore  Dockerfile.feature-generator  IMPLEMENTATION_SUCCESS.md  KAFKA_ARCHITECTURE.md  KAFKA_STREAMING_FEATURES.md  KSQL_SETUP_GUIDE.md  README.md  demo-ksql-features.sh  docker-compose-features.yml  docker-compose.yml  ksql-queries.sql  monitor-ksql.sh  quick-test.sh  setup-ksql.sh  test-integration.sh  test-pipeline.sh
docker/: Dockerfile.feature-generator  Dockerfile.warehouse  docker-compose.yml  kafka-docker-compose.yml
docs/: architecture.excalidraw  price-validator.md  spec.md
feature-generator/: Cargo.toml
feature-generator/src/: lib.rs  main.rs  rsi.rs
feature-generator/tests/: integration_test.rs
price-ingestion/: Cargo.toml
price-ingestion/src/: api.rs  gmx.rs  iceberg.rs  kafka_storage.rs  lib.rs  main.rs
price-ingestion/tests/: gmx_tests.rs  integration_tests.rs  kafka_tests.rs  main_tests.rs
strategies/: BACKTEST.md  Cargo.toml  README.md
strategies/src/: backtest.rs  backtest_mode.rs  gmx.rs  lib.rs  main.rs  pairs_trading.rs  paper_trade_mode.rs  price_client.rs  rsi_strategy.rs  strategy.rs  visualization.rs
strategies/src/trading_modes/: backtest.rs  mod.rs  paper_trade.rs  trading_mode.rs
strategies/tests/: integration_test.rs  integration_tests.rs
tests/: README.md  component_tests.sh  docker_integration_test.sh  ksql_setup_test.sh
warehouse/: Cargo.toml
warehouse/sql/: historical-queries.sql  ksql-setup.sql
warehouse/src/: iceberg.rs  lib.rs  main.rs  server.rs  storage.rs  transformations.rs
warehouse/src/transformations/: historical.rs  ksql.rs
warehouse/tests/: integration_test.rs
