[package]
name = "feature-generator"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.36", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
rdkafka = { version = "0.36", features = ["cmake-build"] }
rand = "0.8"
anyhow = "1.0"