[package]
name = "strategies"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1.36", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
async-trait = "0.1"
plotters = "0.3.7"
clap = { version = "4.5", features = ["derive"] }
rdkafka = { version = "0.36", features = ["cmake-build"] }
uuid = { version = "1.0", features = ["v4"] }
tracing = "0.1"
