[package]
name = "warehouse"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
arrow = "53.0"
chrono = { version = "0.4", features = ["serde"] }
datafusion = "42.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"
uuid = { version = "1.0", features = ["v4"] }
reqwest = { version = "0.12", features = ["json"] }
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors"] }
parquet = "53.0"

[dev-dependencies]
tempfile = "3.0"